refactor: minor changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     lacinia odio sem nec elit
                   </p>
                   <div class="portfolio__tags">
-                    <button class="tag" autofocus>All</button>
+                    <button class="tag">All</button>
                     <button class="tag">Web Design</button>
                     <button class="tag">Graphic Design</button>
                     <button class="tag">Artwork</button>
